--- a/korona.html
+++ b/korona.html
@@ -1,27 +1,60 @@
-<p>Ako ste dobili ovaj link, neko od vaših prijatelja smatra da raspolažete lošim informacijama.</p>
+<html>
+<head>
+<style>
+body {
+  background: #ccc;
+}
+
+* {
+  font-family: Helvetica, Arial, sans-serif;
+}
+
+#page {
+  background: #fff;
+  margin: auto;
+  max-width: 800px;  
+  padding: 20px 10px;
+  width: 50%;
+}
+
+h1 {
+  text-align: center;
+}
+
+</style>
+</head>
+<body>
+<div id="page">
+<h1>Dezinformacije o Korona COVID-19 Virusu</h2>
+<p>Ako ste dobili ovaj link, neko od vaših prijatelja smatra da raspolažete <b>lošim informacijama</b>.</p>
 
 <p>Ovo je kolekcija svih dezinformacija koje će korisnici kačiti na <a href="https://www.facebook.com/groups/117202582284906/permalink/491890428149451">temi o Korona Virusu</a> u grupi <a href="https://www.facebook.com/groups/117202582284906/">nauka</a>.</p>
 
-<h2>Maska stiti od infekcije.</h2>
-<p>Ne, maska moze da zastiti druge ako ste vi inficirani ali nije nesto efektivna da zastiti vas.</p>
+<h2>Maska štiti od infekcije.</h2>
+<p>Ne, maska može da zaštiti druge ako ste vi inficirani, ali nije nešto efektivna da zaštiti vas.</p>
 
 <h2>Virus umire na 27c.</h2>
-<p>Ne, da virus umire na 27c, umro bi i na 36.6 sto je vasa normalna telesna temperatura.</p>
+<p>Ne, da virus umire na 27c, umro bi i na 36.6 što je vasa normalna telesna temperatura.</p>
 
 <h2>Alkohol ubija virus.</h2>
-<p>Da, na povrsinama oko vas, pijenje alkohola nece ubiti virus niti ce vas zastititi.</p>
+<p>Da, na površinama oko vas. <u>Pijenje</u> alkohola neće ubiti virus niti će vas zaštititi.</p>
 
-<h2>Zene su zasticene od virusa.</h2>
-<p>Gluposti, ista je sansa da obolite bez obzira na pol.</p>
+<h2>Žene su zaštićene od virusa.</h2>
+<p>Gluposti, ista je šansa da obolite bez obzira na pol.</p>
 
-<h2>Kada nasupi kucni karantin necete imati sta da jedete. Iskljucivo cete moci da porucujete hranu</h2>
-<p>Gluposti. Opet filmovi prave problem. Cak i kada je ceo grad u kucnom karantinu, administracija je svesna da ljudi moraju da jedu. Dakle, i dalje cete moci da idete u prodavnicu. U prodavnici ce i dalje biti normalno svega da se kupi. Mozda ponekad nesto zafali ako neki paranoik dodje i kupi recimo sav toalet papir ali vec sutra ili prekosutra ce zalihe biti obnovljene. Dakle, ignorisite apokalipticne scenarije iz filmova gde je sve zatvoreno i ljudi umiru od gladi. To su gluposti. Nit neko to zeli da pokusa nit je izvodljivo.</p>
+<h2>Kada nasupi kućni karantin nećete imati sta da jedete. Isključivo ćete moći da poručujete hranu</h2>
+<p>Gluposti. Opet filmovi prave problem. Čak i kada je ceo grad u kućnom karantinu, administracija je svesna da ljudi moraju da jedu. Dakle, i dalje ćete moći da idete u prodavnicu. U prodavnici će i dalje biti normalno svega da se kupi. Možda ponekad nesto zafali ako neki paranoik dođe i kupi recimo sav toalet papir ali već sutra ili prekosutra će zalihe biti obnovljene. Dakle, ignorišite apokalipticne scenarije iz filmova gde je sve zatvoreno i ljudi umiru od gladi. To su gluposti. Nit neko to želi da pokusa nit je izvodljivo.</p>
 
-<h2>Srpski geni nas site od virusa.</h2>
-<p>Glupost. Virus ne zanimaju nasi geni. Zanimaju ga nase celije da se u njima razmnozava.</p>
+<h2>Srpski geni nas šite od virusa.</h2>
+<p>Glupost. Virus ne zanimaju nasi geni. Zanimaju ga naše celije da se u njima razmnozava.</p>
 
-<h2>Duvanski dim štiti od Corone</h2>
-<p>Duvanski dim ostecuje pluca. Pusaci kolko znam em imaju vecu sansu da se zaraze em imaju vecu sansu da imaju teze simptome jer su im pluca ostecena.</p>
+<h2>Duvanski dim štiti od virusa.</h2>
+<p>Duvanski dim oštećuje pluca. Pusači imaju veću sansu da se zaraze, i imaju veću šansu da imaju teže simptome jer su im pluća oštećena.</p>
 
-<h2>Beli luk štiti od virusa</h2>
-<p>Od virusa vas mogu zaštiti jedino antitela na specifično soj. Ako niste primi vakcinu, ili ga niste već preležali. Nema tog belog luka koji će vas spasiti.</p>
+<h2>Beli luk štiti od virusa.</h2>
+<p>Od virusa vas mogu zaštiti jedino antitela na specifični soj. Ako niste primi vakcinu, ili ga niste već preležali, nema tog belog luka koji će vas spasiti.</p>
+
+<!-- TODO: <h1>Šta onda nisu gluposti?</h1> -->
+</div>
+</body>
+</html>
