--- a/korona.html
+++ b/korona.html
@@ -30,6 +30,8 @@ h1 {
 
 <p>Ovo je kolekcija svih dezinformacija koje će korisnici kačiti na <a href="https://www.facebook.com/groups/117202582284906/permalink/491890428149451">temi o Korona Virusu</a> u grupi <a href="https://www.facebook.com/groups/117202582284906/">nauka</a>.</p>
 
+<p>Ova stranica je inspirisana originalnom <a href="https://sadaznam.com/medicina/covid19-sve-dezinformacije-na-jednom-mestu">SadaZnam.com</a> stranicom.</p>
+
 <h2>Maska štiti od infekcije.</h2>
 <p>Ne, maska može da zaštiti druge ako ste vi inficirani, ali nije nešto efektivna da zaštiti vas.</p>
 
