--- a/korona.html
+++ b/korona.html
@@ -9,6 +9,10 @@ body {
   font-family: Helvetica, Arial, sans-serif;
 }
 
+h1 {
+  text-align: center;  
+}
+
 #page {
   background: #fff;
   margin: auto;
@@ -17,9 +21,14 @@ body {
   width: 50%;
 }
 
-h1 {
+.img-container {
   text-align: center;
 }
+
+.img-container img {
+  width: 95%;
+}    
+
 
 </style>
 </head>
@@ -56,7 +65,10 @@ h1 {
 <h2>Beli luk štiti od virusa.</h2>
 <p>Od virusa vas mogu zaštiti jedino antitela na specifični soj. Ako niste primi vakcinu, ili ga niste već preležali, nema tog belog luka koji će vas spasiti.</p>
 
-<!-- TODO: <h1>Šta onda nisu gluposti?</h1> -->
+<h1>Šta onda nisu gluposti?</h1>
+<div class="img-container">
+  <img src="sprecavanje.jpg" style="text-align: center" />
+</div>
 </div>
 </body>
 </html>
